MonetDB5/tests/BugReports/Tests/no.062.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

# Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#setoid(oid(20000000));
	aa_a := oid(20000000);
	ba_a := setoid(aa_a);
#var t:= new(int,int);
	t := new(:int,:int);
#t.insert(0,0);
	ca_a := insert(t,0,0);
#t.insert(1+1,0);
	da_a := +(1,1);
	ea_a := insert(t,da_a,0);
#t.insert(-1,-0);
	fa_a := insert(t,-1,-0);
#t.insert(0,0);
	ga_a := insert(t,0,0);
#t.insert(-1+1,0);
	ha_a := +(-1,1);
	ia_a := insert(t,ha_a,0);
#print(t);
	ja_a := print(t);
!ERROR: "t.insert(1 -1,1);"
!        ^
! syntax error, unexpected TOK_CONSTANT, expecting ')' or ','.
